appId: com.duckduckgo.mobile.ios
---

- scrollUntilVisible:
      element: Passwords & Autofill
- tapOn: Passwords & Autofill
- tapOn: Passwords
- tapOn: Passcode field
- inputText: "0000"
- pressKey: Enter

- tapOn:
    id: Button_DismissImportPromo
    optional: true

- scrollUntilVisible:
    element: Dax Login
- assertVisible: Dax Login
- tapOn: Dax Login
- assertVisible: daxthetest
- assertVisible: duckduckgo.com

- tapOn: Passwords
- scrollUntilVisible:
    element: Github
- assertVisible: Github
- tapOn: Github
- assertVisible: githubusername
- assertVisible: github.com

- tapOn: Passwords
- scrollUntilVisible:
    element: StackOverflow
- assertVisible: StackOverflow
- tapOn: StackOverflow
- assertVisible: stacker
- assertVisible: stackoverflow.com

- tapOn: Passwords
- scrollUntilVisible:
    element: mypersonalwebsite.com
- assertVisible: mypersonalwebsite.com
- tapOn: mypersonalwebsite.com
- assertVisible: me@mypersonalwebsite.com
- assertVisible: mypersonalwebsite.com

- tapOn: Passwords
- tapOn: Passwords & Autofill
- tapOn: Settings
