appId: com.duckduckgo.mobile.ios
---

- scrollUntilVisible:
    element: Sync & Backup
- tapOn: Sync & Backup
- scroll
- assertVisible: Share Favorites Across Devices
# Enable "Share Favorites Across Devices" only if it is currently off.
- runFlow:
    when:
      visible:
        id: "UnifiedFavoritesToggle"
        checked: false
    commands:
        - tapOn:
            id: "UnifiedFavoritesToggle"
- extendedWaitUntil:
    visible:
      id: "UnifiedFavoritesToggle"
      checked: true
    timeout: 10000
- tapOn: Settings
- tapOn: Done

# Validate the favorites are now visible on the new tab to prove they have been sync'd - we can't assume that's where we are just now though so navigate there first.
- assertVisible: Tab Switcher
- tapOn: Tab Switcher
- assertVisible: "New Tab"
- tapOn: "New Tab"
- assertVisible: NFL.com | Official Site of the National Football League
- assertVisible: DuckDuckGo · GitHub
- assertVisible: Stack Overflow - Where Developers Learn, Share, & Build Careers
