appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - sync
name: 00_setup

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

- pressKey: HOME

- swipe:
    direction: DOWN

- inputText: Settings
- pressKey: ENTER

- tapOn: General
- tapOn: Keyboard

- scrollUntilVisible:
    element: Dictation

- tapOn: Enable Dictation

- tapOn: 
    text: Cancel
    optional: true

- tapOn: 
    text: Turn Off Dictation
    optional: true
