appId: com.duckduckgo.mobile.ios
---

- pressKey: HOME

- swipe:
    direction: DOWN

- inputText: Settings
- pressKey: ENTER

- tapOn: General
- tapOn: Keyboard

- scrollUntilVisible:
    element: Dictation

- tapOn: Enable Dictation

- tapOn: 
    text: Cancel
    optional: true

- tapOn: 
    text: Turn Off Dictation
    optional: true
